# knowtok

./: .env.example  .gitignore  .vercelignore  App.js  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  app.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/services/: cards.py  personalized_hooks.py
backend/tests/: test_cards_service.py
docs/: algorithm-v1.md  app-store-privacy-labels.md  data-sources-v2.md  data-sources-v3.md  data-sources.md  design-research.md  journal-pipeline-plan.md  journal-sources-research.md  onboarding-research.md  onboarding-v3-proposal.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mobile/: .env.example  .gitignore  AGENTS.md  App.tsx  README.md  app.json  eas.json  index.ts  package-lock.json  package.json  vitest.config.ts
scripts/: backfill-paper-metadata.ts  (+15 more)
worker/: .env.example  README.md  pyproject.toml
worker/app/: __init__.py  celery_app.py
worker/app/clients/: arxiv.py  db.py  semantic_scholar.py  zhipu.py
worker/app/config/: settings.py
worker/app/models/: paper.py
worker/app/services/: content.py  papers.py
worker/app/tasks/: pipeline.py
worker/scripts/: backfill_semantic_scholar.py  check_db.py  run_daily.sh  run_pipeline.py
worker/tests/: test_arxiv_client.py  test_content.py  test_content_service.py
(+192 files in other folders)
