[project]
name = "knowtok-backend"
version = "0.1.0"
description = "FastAPI backend for KnowTok cards and feedback APIs."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.39",
  "psycopg[binary]>=3.2.6",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
