[project]
name = "knowtok-worker"
version = "0.1.0"
description = "Background workers for paper ingestion, embeddings, and hook generation."
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.6",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.39",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
